test/src/e2e_vm_tests/test_programs/should_fail/insufficient_type_info/src/lib.sw
library;

pub enum MyOption<T> {
    Some: T,
    None: (),
}